[package]
name = "pyrls"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
git2 = "0.20"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
toml = "0.9"
ureq = { version = "2.12", features = ["json"] }

[dev-dependencies]
mockito = "1.7"
