[package]
name = "pyrls"
version = "0.1.0"
edition = "2024"
description = "A single-binary release automation tool for Python projects"
license = "MIT"
repository = "https://github.com/iamgp/pyrls"
homepage = "https://github.com/iamgp/pyrls"
readme = "README.md"
keywords = ["python", "release", "changelog", "pypi", "conventional-commits"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
git2 = "0.20"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
toml = "0.9"
ureq = { version = "2.12", features = ["json"] }

[dev-dependencies]
mockito = "1.7"
