[dependencies]
anyhow = "1.0"
console = "0.15"
git2 = "0.20"
indicatif = "0.17"
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
toml = "0.9"

[dependencies.clap]
features = ["derive"]
version = "4.5"

[dependencies.openssl]
features = ["vendored"]
version = "0.10"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.ureq]
features = ["json"]
version = "2.12"

[dev-dependencies]
mockito = "1.7"

[package]
categories = [
    "command-line-utilities",
    "development-tools",
]
description = "A single-binary release automation tool for Python projects"
edition = "2024"
homepage = "https://github.com/iamgp/pyrls"
keywords = [
    "python",
    "release",
    "changelog",
    "pypi",
    "conventional-commits",
]
license = "MIT"
name = "pyrls"
readme = "README.md"
repository = "https://github.com/iamgp/pyrls"
version = "0.3.0"
